# moneyger-notifications

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml  setup.cfg  start_consumers.py
.github/workflows/: code-style.yml  deploy.yml  docker-image.yml  tests.yml
app/: application.py  config.py  containers.py  error_handlers.py  models.py
app/celery/: app.py  entrypoint.py  tasks.py
app/consumers/: base.py  entrypoint.py  executors.py  message_sent.py  transaction_added.py  transactions_added.py  transactions_deleted.py  user_created.py  user_credentials_rpc.py  user_deleted.py
app/middleware/: auth.py
app/resources/: users.py
app/services/: consumers.py  email.py  messages.py  predictions.py  transactions.py  users.py
app/templates/: base_email.html  prediction.html  recent_messages.html  unread_messages.html
app/templates/html/: recent_messages.html  unread_messages.html
tests/: conftest.py  factories.py  test_db.py  test_email_service.py  test_message_storage.py  test_predictions_service.py  test_transactions.py  test_transactions_service.py  test_users_resource.py  test_users_service.py
