[tool.isort]
profile = "black"

[tool.poetry]
name = "moneyger-notifications"
version = "0.1.0"
description = "Notifications service"
authors = ["SweetBubaleXXX <70811772+SweetBubaleXXX@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
dependency-injector = {extras = ["pydantic"], version = "^4.41.0"}
pydantic = "<2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
