[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["attr-defined"]

[tool.poetry]
name = "moneyger-notifications"
version = "0.1.0"
description = "Notifications service"
authors = ["SweetBubaleXXX <70811772+SweetBubaleXXX@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
dependency-injector = {extras = ["pydantic"], version = "^4.41.0"}
pydantic = {version = "<2", extras = ["dotenv", "email"]}
pymongo = "^4.6.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}
flask-restful = "^0.3.10"
flask-http-middleware = "^0.4.2"
pyjwt = "^2.8.0"
py-auth-header-parser = "^1.0.2"
pika = "^1.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-flask = "^1.3.0"
factory-boy = "^3.3.0"
mongomock = "^4.1.2"
fakeredis = {extras = ["lua"], version = "^2.20.0"}
isort = "^5.12.0"
mypy = "^1.7.0"
flake8 = "^6.1.0"
black = "^23.11.0"


[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
